--- a/src/pages/dashBoard/DashboardComponent.scss
+++ b/src/pages/dashBoard/DashboardComponent.scss
@@ -9,3 +9,10 @@
       color: #333;
     }
   }
+
+  .data-popu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
